# Messenger

./: README.md
doc/: Messenger项目文档.docx
src/: CMakeLists.txt  ChatForm.qml  Main.qml  UserList.qml  formchat.cpp  formchat.h  main.cpp  messenger.cpp  messenger.h  userlistmodel.cpp  userlistmodel.h
src/ipmsg/: filetransworker.cpp  filetransworker.h  formchat.cpp  formchat.h  ipmsgcommon.h  ipmsgfileclient.cpp  ipmsgfileclient.h  ipmsgfilerecv.cpp  ipmsgfilerecv.h  ipmsgfileserver.cpp  ipmsgfileserver.h  ipmsgtcpserver.cpp  ipmsgtcpserver.h  ipmsgtcpsession.cpp  ipmsgtcpsession.h  ipmsgudpsession.cpp  ipmsgudpsession.h  ipmsguser.cpp  ipmsguser.h
video/: 答辩ppt.pptx
